feat: implements heros projectiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,6 @@
 {
     "files.associations": {
-        "stdlib.h": "c",
-        "mlv_all.h": "c",
-        "main.h": "c",
-        "window.h": "c",
-        "stdio.h": "c",
-        "animation.h": "c",
-        "position.h": "c",
-        "dimension.h": "c",
-        "image.h": "c",
         "heros.h": "c",
-        "event_manager.h": "c",
-        "creature.h": "c",
-        "objet.h": "c"
+        "projectile.h": "c"
     }
 }
