--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "stdlib.h": "c",
         "position.h": "c",
         "image.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "animation.h": "c"
     }
 }
