feat: added the remove fun for the enemy that allow to generate infinites enemys

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "image.h": "c",
         "main.h": "c",
         "animation.h": "c",
-        "enemy.h": "c"
+        "enemy.h": "c",
+        "enemy_controller.h": "c"
     }
 }
