feat: enemy controller change state on enemy shooting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "utils.h": "c",
         "klaed.h": "c",
         "nairan.h": "c",
-        "nautolan.h": "c"
+        "nautolan.h": "c",
+        "projectile_controller.h": "c"
     }
 }
