feat: add change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,14 @@
 {
+    "cmake.sourceDirectory": "/home/marwan/Prog/PROJET/Space-Invader",
+    "cmake.configureOnOpen": true,
+    "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
     "files.associations": {
         "*.rmd": "markdown",
-        "main.h": "c",
-        "player_view.h": "c",
-        "shape.h": "c",
-        "text.h": "c",
-        "image.h": "c",
-        "button.h": "c",
-        "player.h": "c",
-        "ship_customization.h": "c",
-        "ship_customization_view.h": "c",
-        "string_view": "c",
-        "limits": "c",
-        "settings_bar_view.h": "c",
-        "game_manager.h": "c",
-        "event_manager.h": "c",
-        "utils.h": "c",
-        "players_controller.h": "c",
-        "collision_controller.h": "c",
-        "bonus_controller.h": "c",
-        "asteroid_controller.h": "c"
+        "bonus.h": "c",
+        "heros.h": "c",
+        "animation.h": "c",
+        "projectile_controller.h": "c",
+        "asteroid.h": "c",
+        "utils.h": "c"
     }
 }
