--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,11 @@
         "animation.h": "c",
         "projectile_controller.h": "c",
         "asteroid.h": "c",
-        "utils.h": "c"
+        "utils.h": "c",
+        "game_over_screen.h": "c",
+        "pause_screen.h": "c",
+        "collision_controller.h": "c",
+        "screens_controller.h": "c",
+        "game_manager.h": "c"
     }
 }
